syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "callback_input.proto";
import "acs13.proto";
import "receipt_maker.proto";

option csharp_namespace = "AElf.Contracts.Bridge";

service BridgeContract {
    option (aelf.csharp_state) = "AElf.Contracts.Bridge.BridgeContractState";
    option (aelf.base) = "acs13.proto";
    option (aelf.base) = "receipt_maker.proto";

    rpc Initialize (InitializeInput) returns (google.protobuf.Empty) {}

    rpc CreateSwap (CreateSwapInput) returns (aelf.Hash) {
    }
    rpc SwapToken (SwapTokenInput) returns (google.protobuf.Empty) {
    }
    rpc ChangeSwapRatio (ChangeSwapRatioInput) returns (google.protobuf.Empty) {
    }
    rpc Deposit (DepositInput) returns (google.protobuf.Empty) {
    }
    rpc Withdraw (WithdrawInput) returns (google.protobuf.Empty) {
    }
    rpc UpdateMerkleTree (UpdateMerkleTreeInput) returns (google.protobuf.Empty) {
    }
    rpc RecordReceiptHash (CallbackInput) returns (google.protobuf.Empty) {
    }

    rpc ChangeMaximalLeafCount (google.protobuf.Int32Value) returns (google.protobuf.Empty) {
    }

    // view methods

    rpc GetSwapInfo (aelf.Hash) returns (SwapInfo) {
        option (aelf.is_view) = true;
    }
    rpc GetSwapPair (GetSwapPairInput) returns (SwapPair) {
        option (aelf.is_view) = true;
    }
    rpc GetSwapAmounts (GetSwapAmountsInput) returns (SwapAmounts) {
        option (aelf.is_view) = true;
    }
    rpc GetRegimentAddressByRecorderId (google.protobuf.Int64Value) returns (aelf.Address) {
        option (aelf.is_view) = true;
    }
    rpc GetSwappedReceiptIdList (GetSwappedReceiptIdListInput) returns (ReceiptIdList) {
        option (aelf.is_view) = true;
    }
    rpc GetSwappedReceiptInfoList (GetSwappedReceiptInfoListInput) returns (ReceiptInfoList) {
        option (aelf.is_view) = true;
    }
}

message InitializeInput {
    aelf.Address oracle_contract_address = 1;
    aelf.Address merkle_tree_recorder_contract_address = 2; 
    aelf.Address regiment_contract_address = 3; 
    aelf.Address merkle_tree_generator_contract_address = 4;
    int32 merkle_tree_leaf_limit = 5;
}

message CreateSwapInput {
    int32 origin_token_size_in_byte = 1;
    bool origin_token_numeric_big_endian = 2;
    repeated SwapTargetToken swap_target_token_list = 3;
    aelf.Address regiment_address = 4;
}

message SwapTargetToken {
    string target_token_symbol = 1;
    SwapRatio swap_ratio = 2;
    int64 deposit_amount = 3;
}

message SwapInfo {
    aelf.Hash swap_id = 1;
    int32 origin_token_size_in_byte = 2;
    bool origin_token_numeric_big_endian = 3;
    map<string, aelf.Hash> swap_target_token_map = 4;
    aelf.Address regiment_address = 5;
    int64 recorder_id = 6;
}

message SwapPair {
    aelf.Hash swap_id = 1;
    int32 origin_token_size_in_byte = 2;
    bool origin_token_numeric_big_endian = 3;
    string target_token_symbol = 4;
    SwapRatio swap_ratio = 5;
    int64 swapped_amount = 6;
    int64 swapped_times = 7;
    int64 deposit_amount = 8;
}

message SwapRatio {
    int64 origin_share = 1;
    int64 target_share = 2;
}

message ChangeSwapRatioInput {
    aelf.Hash swap_id = 1;
    SwapRatio swap_ratio = 2;
    string target_token_symbol = 3;
}

message SwapTokenInput {
    aelf.Hash swap_id = 1;
    int64 receipt_id = 2;
    string origin_amount = 3;
}

message DepositInput {
    aelf.Hash swap_id = 1;
    string target_token_symbol = 2;
    int64 amount = 3;
}

message GetSwapPairInput {
    aelf.Hash swap_id = 1;
    string target_token_symbol = 2;
}

message GetSwapAmountsInput {
    aelf.Hash swap_id = 1;
    int64 receipt_id = 2;
}

message SwapAmounts {
    aelf.Address receiver = 1;
    map<string, int64> received_amounts = 2;
}

message WithdrawInput {
    aelf.Hash swap_id = 1;
    string target_token_symbol = 2;
    int64 amount = 3;
}

message ReceiptHashMap {
    map<int64, string> value = 1;
    int64 recorder_id = 2;
}

message UpdateMerkleTreeInput {
    int64 recorder_id = 1;
    aelf.Address regiment_address = 2;
}

message ReceiptIdList {
    repeated int64 value = 1;
}

message GetSwappedReceiptIdListInput {
    aelf.Hash swap_id = 1;
    aelf.Address receiver_address = 2;
}

message GetSwappedReceiptInfoListInput {
    aelf.Hash swap_id = 1;
    aelf.Address receiving_address = 2;
}

message ReceiptInfo {
    int64 receipt_id = 1;
    aelf.Hash receiving_tx_id = 2;
    google.protobuf.Timestamp receiving_time = 3;
    int64 amount = 4;
    map<string, int64> amount_map = 5;
}

message ReceiptInfoList {
    repeated ReceiptInfo value = 1;
}

message SendingInfo {
    int64 receipt_id = 1;
    string sending_tx_id = 2;
    string sending_time = 3;
}

// Events

message SwapRatioChanged {
    option (aelf.is_event) = true;
    aelf.Hash swap_id = 1;
    SwapRatio new_swap_ratio = 2;
    string target_token_symbol = 3;
}

message TokenSwapped {
    option (aelf.is_event) = true;
    aelf.Address address = 1;
    int64 amount = 2;
    string symbol = 3;
}

message SwapPairAdded {
    option (aelf.is_event) = true;
    aelf.Hash swap_id = 1;
}